<resources>
    <string name="app_name">Medule</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accept">Accept</string>
    <string name="add_new_medicine">Add New Medicine</string>
    <string name="cancel">Cancel</string>
    <string name="take_medicine">Take Medicine</string>
    <string name="delete">Delete</string>
    <string name="change_time">Change Time</string>
    <string name="change_name">Change Name</string>
    <string name="medicine_name">Medicine name</string>
    <string name="hours_between_doses">Hours between doses</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="medule">Medule</string>
    <string name="take_all_meds">Take all meds</string>
    <string name="sort_by">Sort By</string>
    <string name="channel_name">Medule</string>
    <string name="channel_description">Notifications for Medule app</string>
    <string name="filter_by_pending">Filter by Pending</string>
    <string name="remove_filters">remove filters</string>
</resources>
